<resources>
    <string name="app_name">BeBeLuxury</string>
    <string name="no_products">No hay productos disponibles</string>
    <string name="add_product">Agregar Producto</string>
    <string name="product_image">Imagen del Producto</string>
    <string name="product_name">Nombre del Producto</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="category">Categoría</string>
    <string name="stock">Stock</string>
    <string name="image_url">URL de la Imagen</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="product_details">Detalles del Producto</string>
    <string name="confirm_delete">¿Está seguro que desea eliminar este producto?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="product_added">Producto agregado</string>
    <string name="product_updated">Producto actualizado</string>
    <string name="product_deleted">Producto eliminado</string>
    <string name="fill_all_fields">Por favor complete todos los campos</string>
    <string name="share_product">Compartir Producto</string>
    <string name="share_text">¡Mira este producto de BeBeLuxury!\n\n%1$s\n%2$s\n\nPrecio: $%3$.2f\nStock disponible: %4$d unidades</string>
    <string name="about">Acerca de</string>
    <string name="lifecycle_demo">Demostración Ciclo de Vida</string>
    
    <string-array name="product_categories">
        <item>Bolsos</item>
        <item>Relojes</item>
        <item>Perfumes</item>
        <item>Calzado</item>
        <item>Joyería</item>
        <item>Accesorios</item>
        <item>Ropa</item>
    </string-array>
</resources>